Traversal GC heuristics